# Advent-of-Code-Puzzle-Solver

./: .gitignore  README.md  app.py  base.py  config.py  messages.py  public_stats.ipynb  puzzle_data.csv  puzzle_info.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
Advent_of_Code/aoc2015/: __init__.py
advent_of_code/: __init__.py
advent_of_code/y2015/: __init__.py
advent_of_code/y2016/: __init__.py
advent_of_code/y2017/: __init__.py
advent_of_code/y2018/: __init__.py
advent_of_code/y2019/: __init__.py
advent_of_code/y2020/: __init__.py
assets/: .mlpstyle  style.css
data/: example_grids.json  puzzle_data.csv  puzzle_db.csv
db/: completion.csv  grid_letter.json  progress.csv  puzzle_info.csv  title.csv  video.csv
lib/: __init__.py  aoc.py  db.py  grid_letter.py  plot.py  plots.py  puzzle.py  puzzle_input.py  solution.py  title.py  utils.py  video.py
maintenance/: plot_data.py  upload_puzzles.py  utils.py
my_functions/: aoc.py  aoc2015.py  aoc2017.py  aoc2018.py  aoc2019.py  aoc2021.py  aoc2022.py  db.py  plots.py  solve.py  utils.py
pages/: puzzle_solver.py
tabs/: about_tab.py  description_tab.py  grid_letter_tab.py  interactive_tab.py  main_puzzle_tab.py  main_tab.py  personal_stats.py  personal_stats_tab.py  public_stats_tab.py  puzzle_solver.py  solver_tab.py  source_code_tab.py  stats_n_graphs.py  stats_tab.py  sub_tabs.py  video_tab.py
temp_storage/: puzzle_input.json  solution.csv
utils/: handle_grids.py  handle_puzzle_data.py  handle_puzzle_input.py  handle_solutions.py  read_letter_grid.py  toolbox.py
(+319 files in other folders)
